# DocumentionTemplete

./: README.md
CMake/: CMakeLists(Main_directory).txt  CMakeLists(src_directory).txt  CMakeLists(utility_directory).txt
CMake/A Simple CMake Project/: CMakeLists.txt
CMake/A Simple CMake Project/utility/: CMakeLists.txt  ClassA.cpp
